--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Correction Orthographique</title>
-    <link rel="stylesheet" href="/output.css" />
+    <link rel="stylesheet" href="/public/output.css" />
   </head>
   <body class="m-5">
     <h1 class="text-5xl text-primary font-bold text-center">oRTO</h1>
