--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Correction Orthographique</title>
     <link rel="stylesheet" href="/output.css" />
   </head>
-  <body class="m-5">
+  <body class="m-5 overflow-hidden">
     <h1 class="text-5xl text-primary font-bold text-center">oRTO</h1>
     <form id="textForm" class="w-96 mx-auto">
       <textarea
