--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Correction Orthographique</title>
+    <title>oRTO</title>
     <link rel="stylesheet" href="/output.css" />
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
   <body class="m-5 overflow-hidden">
     <h1 class="text-5xl text-primary font-bold text-center">oRTO</h1>
